--- a/html-css/index.html
+++ b/html-css/index.html
@@ -25,16 +25,11 @@
 
     <!-- Product Section -->
     <section id="products">
-        <h2>Our Products</h2>
+        <h2>Why us?</h2>
         <div class="product">
-            <img src="product1.jpg" alt="Product 1">
+            <img class="img-1" src="/img/image-toko.png" alt="Product 1">
             <h3>Product 1</h3>
             <p>High-quality and affordable product for your needs.</p>
-        </div>
-        <div class="product">
-            <img src="product2.jpg" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>Another fantastic product available for you.</p>
         </div>
     </section>
 
@@ -46,6 +41,7 @@
             <div class="grid-item">Product 2</div>
             <div class="grid-item">Product 3</div>
             <div class="grid-item">Product 4</div>
+            <div class="grid-item">Product 5</div>
         </div>
     </section>
 
@@ -80,7 +76,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 UMKM Business. All rights reserved.</p>
+        <p>&copy; 2024 UMKM Tahu Bulat Ary. All rights reserved.</p>
     </footer>
 </body>
 </html>
