--- a/html-css/index.html
+++ b/html-css/index.html
@@ -13,10 +13,9 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="produk.html">Produk</a></li>
-            <li><a href="#">Layanan</a></li>
-            <li><a href="#">Galeri</a></li>
-            <li><a href="#">Testimoni</a></li>
-            <li><a href="#">Kontak</a></li>
+            <li><a href="layanan.html">Layanan</a></li>
+            <li><a href="#galeri">Galeri</a></li>
+            <li><a href="#testimoni">Testimoni</a></li>
         </ul>
     </nav>
 
@@ -24,26 +23,22 @@
     <section class="hero">
         <div class="hero-text">
             <h1>Ketahui Hama, Selamatkan Hama</h1>
-            <p>Kang Tani, Solusi Digital Pertanian.</p>
+            <h3>Kang Tani, Solusi Digital Pertanian.</h3>
+            <p>Login untuk membuat member</p>
             <form>
                 <input type="email" placeholder="Email address">
                 <input type="password" placeholder="Password">
                 <button type="submit">Login</button>
             </form>
-            <div class="social-login">
-                <a href="#">Facebook</a>
-                <a href="#">Google</a>
-                <a href="#">Apple</a>
-            </div>
         </div>
         <div class="hero-image">
-            <!-- Add your illustration image -->
-            <img src="farmer.png" alt="Farmer Illustration">
+            <img src="/Farmer1.png" alt="Farmer Illustration">
         </div>
     </section>
 
     <!-- About Product Section -->
     <section class="about-product">
+        <img class="padi" src="/Padi.jpg" alt="Padi Illust">
         <h2>Butuh Obat Anti Hama?</h2>
         <p>Kita Menjual berbagai obat untuk hama.</p>
         <div class="product-list">
@@ -60,34 +55,35 @@
     </section>
 
     <!-- Gallery Section -->
-    <section class="gallery">
-        <h2>Preview of Pesticide</h2>
+    <section id="galeri" class="gallery">
+        <h2>Tanaman budidaya menggunakan Kang Tani</h2>
         <div class="gallery-grid">
-            <img src="pesticide1.jpg" alt="Pesticide 1">
-            <img src="pesticide2.jpg" alt="Pesticide 2">
-            <img src="pesticide3.jpg" alt="Pesticide 3">
-            <img src="pesticide4.jpg" alt="Pesticide 4">
+            <img src="/prestisida1.jpeg" alt="Pesticide 1">
+            <img src="/prestisida2.jpeg" alt="Pesticide 2">
+            <img src="/prestisida3.jpg" alt="Pesticide 3">
+            <img src="/prestisida4.jpeg" alt="Pesticide 4">
         </div>
     </section>
 
     <!-- Testimonial Section -->
-    <section class="testimonial">
+    <section id="testimoni" class="testimonial">
         <h2>Testimoni</h2>
+        <img class="petani-testi" src="/petani2.jpg" alt="petani testi">
         <div class="testimonial-item">
-            <p>Pak Jiki - Obat Lengkap, Ampuh, Harga Murah!</p>
+            <h3>Apa kata Mereka?</h3>
+            <p>Pak Jiki: Obat Lengkap, Ampuh, Harga Murah!</p>
         </div>
     </section>
 
     <!-- Call to Action -->
     <section class="cta">
-        <h2>Identifikasi Hama Pada Tanaman</h2>
-        <p>Just one call away: +62 898 9999 123</p>
+        <h2>Pelopor Obat hama paling ampuh sejak 1980</h2>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>© 2024 Kang Tani. All rights reserved.</p>
+            <p>© 2024 Kang Tani. Semua Hak Dilindungi.</p>
             <div class="footer-links">
                 <a href="#">Facebook</a>
                 <a href="#">Instagram</a>
