cuman raphihin folder mas/mba

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -32,13 +32,13 @@
             </form>
         </div>
         <div class="hero-image">
-            <img src="/Farmer1.png" alt="Farmer Illustration">
+            <img src="/img/Farmer1.png" alt="Farmer Illustration">
         </div>
     </section>
 
     <!-- About Product Section -->
     <section class="about-product">
-        <img class="padi" src="/Padi.jpg" alt="Padi Illust">
+        <img class="padi" src="/img/Padi.jpg" alt="Padi Illust">
         <h2>Butuh Obat Anti Hama?</h2>
         <p>Kita Menjual berbagai obat untuk hama.</p>
         <div class="product-list">
@@ -58,17 +58,17 @@
     <section id="galeri" class="gallery">
         <h2>Tanaman budidaya menggunakan Kang Tani</h2>
         <div class="gallery-grid">
-            <img src="/prestisida1.jpeg" alt="Pesticide 1">
-            <img src="/prestisida2.jpeg" alt="Pesticide 2">
-            <img src="/prestisida3.jpg" alt="Pesticide 3">
-            <img src="/prestisida4.jpeg" alt="Pesticide 4">
+            <img src="/img/prestisida1.jpeg" alt="Pesticide 1">
+            <img src="/img/prestisida2.jpeg" alt="Pesticide 2">
+            <img src="/img/prestisida3.jpg" alt="Pesticide 3">
+            <img src="/img/prestisida4.jpeg" alt="Pesticide 4">
         </div>
     </section>
 
     <!-- Testimonial Section -->
     <section id="testimoni" class="testimonial">
         <h2>Testimoni</h2>
-        <img class="petani-testi" src="/petani2.jpg" alt="petani testi">
+        <img class="petani-testi" src="/img/petani2.jpg" alt="petani testi">
         <div class="testimonial-item">
             <h3>Apa kata Mereka?</h3>
             <p>Pak Jiki: Obat Lengkap, Ampuh, Harga Murah!</p>
