--- a/html-css/layanan.html
+++ b/html-css/layanan.html
@@ -25,12 +25,12 @@
                 <div class="kontak-item">
                     <h2>Hubungi via WhatsApp</h2>
                     <a href="https://wa.me/6281234567890" target="_blank" class="whatsapp-button">
-                        <img src="/whatsapp.jpg" alt="WhatsApp Icon"> Hubungi Kami di WhatsApp
+                        <img src="/img/whatsapp.jpg" alt="WhatsApp Icon"> Hubungi Kami di WhatsApp
                     </a>
                 </div>
                 <div class="kontak-item">
                     <h2>Pindai Barcode Kami</h2>
-                    <img src="/qr.png" alt="QR Code" class="qr-code">
+                    <img src="/img/qr.png" alt="QR Code" class="qr-code">
                     <p>Pindai kode QR di atas untuk menghubungi kami via WhatsApp.</p>
                 </div>
             </div>
