--- a/html-css/produk.html
+++ b/html-css/produk.html
@@ -23,17 +23,17 @@
             <h1>Produk Kami</h1>
             <div class="produk-container">
                 <div class="produk-item">
-                    <img class="obat" src="/pestisida1.jpg" alt="Pestisida A" class="responsive-image">
+                    <img class="obat" src="/img/pestisida1.jpg" alt="Pestisida A" class="responsive-image">
                     <h2>Methomyl</h2>
                     <p>Pestisida yang ampuh untuk memberantas hama jenis tertentu pada tanaman Anda.</p>
                 </div>
                 <div class="produk-item">
-                    <img class="obat" src="/pestisida2.jpg" alt="Pestisida B" class="responsive-image">
+                    <img class="obat" src="/img/pestisida2.jpg" alt="Pestisida B" class="responsive-image">
                     <h2>Mancozeb</h2>
                     <p>Solusi terbaik untuk melindungi tanaman dari serangga dan jamur.</p>
                 </div>
                 <div class="produk-item">
-                    <img class="obat" src="/pestisida3.jpg" alt="Pestisida C" class="responsive-image">
+                    <img class="obat" src="/img/pestisida3.jpg" alt="Pestisida C" class="responsive-image">
                     <h2>Thiamethoxam</h2>
                     <p>Produk andalan kami untuk hama tanaman yang lebih besar dan membandel.</p>
                 </div>
